<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScrollSocket</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About / Help</string>

    <string name="no_host_defined">No valid recipient host defined. Please configure in &#8220;Settings / Recipient host&#8221;.</string>

    <string name="preferences_host">Recipient host</string>
    <string name="preferences_host_summary">Host name or IP address where touch input is sent to</string>
    <string name="preferences_keep_display_active">Keep display active</string>
    <string name="preferences_keep_display_active_on">Display won\'t turn off while ScrollSocket is active</string>
    <string name="preferences_keep_display_active_off">Display will turn off according to system settings</string>
    
    <string name="preferences_invert_scroll">Invert Scroll axis</string>
    <string name="preferences_invert_scroll_on">Swiping down scrolls up</string>
    <string name="preferences_invert_scroll_off">Swiping down scrolls down</string>


</resources>
