<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <EditTextPreference
            android:defaultValue="192.168.1.107"
            android:key="host_preference"
            android:singleLine="true"
            android:inputType="textUri"
            android:title="@string/preferences_host"
            android:summary="@string/preferences_host_summary" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keep_display_active_preference"
            android:title="@string/preferences_keep_display_active"
            android:summaryOn="@string/preferences_keep_display_active_on"
            android:summaryOff="@string/preferences_keep_display_active_off" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="invert_scroll_preference"
            android:title="@string/preferences_invert_scroll"
            android:summaryOn="@string/preferences_invert_scroll_on"
            android:summaryOff="@string/preferences_invert_scroll_off" />

</PreferenceScreen>
